# echem-viewer

./: .gitignore  ARCHITECTURE_SPEC.md  FRONTEND_PLAN.md  README.md  SECURITY_UPGRADE.md  app.py  biologic.py  codegen.py  exafs_implementation.md  gamry.py  pyproject.toml  technique_analysis.py  xas_echem_lookup.csv
backend/: main.py  pyproject.toml  requirements.txt  state.py
backend/routers/: __init__.py  xas.py
echem_core/: __init__.py  codegen.py  export.py  storage.py  transforms.py  types.py
echem_core/analysis/: __init__.py  ca.py  cp.py  cv.py  eis.py  lsv.py  ocv.py
echem_core/parsers/: __init__.py  biologic.py  gamry.py
echem_core/xas/: __init__.py  codegen.py  h5_reader.py  peak_fitting.py  processing.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Chart.tsx  ExportPanel.tsx  FileUpload.tsx  PlotsList.tsx  TechniqueTabs.tsx
frontend/src/components/FileTable/: CustomColumnHeader.tsx  CycleSelector.tsx  EditableCell.tsx  FileRow.tsx  FileTableHeader.tsx  FileTableToolbar.tsx  LinkedPEISSelector.tsx  index.tsx
frontend/src/components/Sidebar/: FontFormatButton.tsx  SettingNumber.tsx  SettingSection.tsx  SettingSelect.tsx  SettingSlider.tsx  SettingText.tsx  SettingTextWithFormat.tsx  SettingToggle.tsx  index.tsx
frontend/src/components/XAS/: AveragingPanel.tsx  (+7 more)
frontend/src/constants/: chart.ts
frontend/src/contexts/: XASContext.tsx
frontend/src/hooks/: useApi.ts  useXASApi.ts
frontend/src/types/: api.ts  xas.ts
plans/: ARCHITECTURE_SPEC.md  EXPORT_PLAN.md  FRONTEND_PLAN.md
(+9 files in other folders)
