[project]
name = "echem-viewer"
version = "0.1.0"
description = "Electrochemistry data viewer for BioLogic .mpr files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.18.0",
    "galvani>=0.4.1",
    "polars>=1.0.0",
    "plotly>=5.0.0",
    "pyarrow>=22.0.0",
    "pandas>=2.3.3",
    "pint>=0.25.2",
]

[tool.uv]
dev-dependencies = []
