[project]
name = "echem-viewer-backend"
version = "0.1.0"
description = "FastAPI backend for echem-viewer"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    "polars>=0.20.0",
    "pint>=0.23",
    "galvani>=0.5.0",
    # XAS dependencies
    "xraylarch>=0.9.75",
    "tinydb>=4.8.0",
    "h5py>=3.10.0",
    "scipy>=1.11.0",
]

[tool.uv]
dev-dependencies = []
